order page and links back and forth

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
+    <title>Index</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h1>Index</h1>
     <p>Hello world!</p>
+    <br>
+    <a href="./order.html">Go to order</a>
   </body>
 </html>
