select meat type

--- a/order.html
+++ b/order.html
@@ -4,6 +4,15 @@
   </head>
   <body>
     <h1>Order here</h1>
+    <form method="POST">
+        <label for="meat-type">Meat type:</label>
+        <select name="meat-type" id="meat-type">
+            <option value="beef">Beef</option>
+            <option value="chicken">Chicken</option>
+            <option value="lamb">Lamb</option>
+            <option value="vegan">Vegan</option>
+        </select>
+    </form>
     <a href="./index.html">Return to index</a>
   </body>
 </html>
