--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Index</h1>
-    <p>Hello world!</p>
+    <p>Welcome!</p>
     <br>
-    <a href="./order.html">Go to order</a>
+    <a href="./order.html">Begin your order</a>
   </body>
 </html>
