--- a/order.html
+++ b/order.html
@@ -3,7 +3,9 @@
     <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Order here</h1>
+    <div class="order-title">
+        <h1 id="order-here">Order here</h1>
+    </div>
     <form method="POST">
         <label for="meat-type">Meat type:</label>
         <select name="meat-type" id="meat-type">
